--- a/zelkBD.theme.css
+++ b/zelkBD.theme.css
@@ -34,8 +34,8 @@
   /* set to '4px solid' to show */
   --embed-color: none;
   /* set to 'Inter', sans-serif !important to use Inter font*/
-  --font-primary: Whitney, "Helvetica Neue", Helvetica, Arial, sans-serif;
-  --font-display: Whitney, "Helvetica Neue", Helvetica, Arial, sans-serif !important;
+  --font-primary: 'gg sans', Whitney, "Helvetica Neue", Helvetica, Arial, sans-serif;
+  --font-display: 'gg sans', Whitney, "Helvetica Neue", Helvetica, Arial, sans-serif !important;
   --border-radius-1: 10px;
   --border-radius-2: 8px;
 }
